traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:15: error: type mismatch;
 found   : Int
 required: Byte
    x += direction;
      ^TraversalZigZag:18: error: type mismatch;
 found   : Int
 required: Byte
      y += 1;
        ^TraversalZigZag:21: error: ambiguous reference to overloaded definition,
both method + in class Byte of type (x: Char)Int
and  method + in class Byte of type (x: Byte)Int
match expected type ?
      y + = 1;
        ^TraversalZigZag:22: error: type mismatch;
 found   : Int
 required: Byte
      x = w - 1;
            ^